--- a/html/pages/mycroft_project.html
+++ b/html/pages/mycroft_project.html
@@ -15,39 +15,39 @@
 
 <body>
 
-    <div class="container max-w-screen-xl p-5">
+    <div class="container max-w-screen-xl row_pr ">
+        <div class="projectAnim1">
+            <div class="alignCenter">
+                <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+            </div>
 
-        <div class="alignCenter">
-            <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
-        </div>
-
-        <div class="container_ref">
-            <div class="row justify-content-center">
-                <div class="col-auto">
-                    <div class="card_Ac">
-                        <a class="a_ref" href="../../index.html">
-                            <h1 class="text_navlink p-2 m-2"> Profile </h1>
-                        </a>
+            <div class="container_ref">
+                <div class="row justify-content-center">
+                    <div class="col-auto">
+                        <div class="card_Ac">
+                            <a class="a_ref" href="../../index.html">
+                                <h1 class="text_navlink p-2 m-2"> Profile </h1>
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-auto">
-                    <div class="card_NavDeac">
-                        <a class="a_ref" href="./projects.html">
-                            <h1 class="text-white p-2 m-2">Projects</h1>
-                        </a>
+                    <div class="col-auto">
+                        <div class="card_NavDeac">
+                            <a class="a_ref" href="./projects.html">
+                                <h1 class="text-white p-2 m-2">Projects</h1>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
+
+            <h1 class="header1">
+                Mycroft AI
+            </h1>
+            <h1 class="header2">
+                Privacy First Home Assistant
+            </h1>
         </div>
-
-        <h1 class="header1">
-            Mycroft AI
-        </h1>
-        <h1 class="header2">
-            Privacy First Home Assistant
-        </h1>
-
-        <div id="carouselExampleDark" class="carousel carousel-dark slide m-5" data-bs-ride="carousel">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide m-5 projectAnim2" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -82,54 +82,56 @@
                 </button>
             </div>
         </div>
-
-        <div class="card m-5 card_pr">
-            <h5 class="card-header header_pr">About the Project</h5>
-            <div class="card-body">
-                <h5 class="card-title">Task</h5>
-                <p class="card-text">The Idea was to deploy Mycroft as a privacy First Home Assistant solution on my
-                    Raspberry Pi to replace my Google home assistant.
-                </p>
-                <h5 class="card-title">Functionality</h5>
-                <p class="card-text">I transformed my Raspberry Pi into a Home Assistant, replacing my Google home
-                    because of privacy issues.
-                    After plugging in my external microphone and speaker and installing the Mycroft distribution, I had
-                    to go through all the setup steps. Due to the great number of settings, I was able to customize
-                    Mycroft to my personal requirements.
-                </p>
+        <div class="projectAnim3">
+            <div class="card m-5 card_pr">
+                <h5 class="card-header header_pr">About the Project</h5>
+                <div class="card-body">
+                    <h5 class="card-title">Task</h5>
+                    <p class="card-text">The Idea was to deploy Mycroft as a privacy First Home Assistant solution on my
+                        Raspberry Pi to replace my Google home assistant.
+                    </p>
+                    <h5 class="card-title">Functionality</h5>
+                    <p class="card-text">I transformed my Raspberry Pi into a Home Assistant, replacing my Google home
+                        because of privacy issues.
+                        After plugging in my external microphone and speaker and installing the Mycroft distribution, I
+                        had
+                        to go through all the setup steps. Due to the great number of settings, I was able to customize
+                        Mycroft to my personal requirements.
+                    </p>
+                </div>
             </div>
-        </div>
 
-        <div class="card m-5 card_pr">
-            <h5 class="card-header header_pr">Source Project</h5>
-            <div class="card-body">
-                <h5 class="card-title">Homepage</h5>
-                <p class="card-text"><a href="https://mycroft.ai/" style="text-decoration: none;">mycroft.ai/</a></p>
+            <div class="card m-5 card_pr">
+                <h5 class="card-header header_pr">Source Project</h5>
+                <div class="card-body">
+                    <h5 class="card-title">Homepage</h5>
+                    <p class="card-text"><a href="https://mycroft.ai/" style="text-decoration: none;">mycroft.ai/</a>
+                    </p>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">GitHub</h5>
+                    <p class="card-text"><a href="https://github.com/MycroftAI"
+                            style="text-decoration: none;">github.com/MycroftAI</a></p>
+                </div>
             </div>
-            <div class="card-body">
-                <h5 class="card-title">GitHub</h5>
-                <p class="card-text"><a href="https://github.com/MycroftAI"
-                        style="text-decoration: none;">github.com/MycroftAI</a></p>
-            </div>
-        </div>
 
-        <div class="card m-5 card_pr">
-            <h5 class="card-header header_pr">Components</h5>
-            <div class="card-body">
-                <div>
-                    <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Linux</h3>
-                    <div class="progress m-3">
-                        <div class="progress-bar" role="progressbar" style="--value:100.0%" aria-valuenow="100.0"
-                            aria-valuemin="0" aria-valuemax="100">100.0%</div>
+            <div class="card m-5 card_pr">
+                <h5 class="card-header header_pr">Components</h5>
+                <div class="card-body">
+                    <div>
+                        <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Linux</h3>
+                        <div class="progress m-3">
+                            <div class="progress-bar" role="progressbar" style="--value:100.0%" aria-valuenow="100.0"
+                                aria-valuemin="0" aria-valuemax="100">100.0%</div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 
     <footer>
-        <p class="footer"> © Philo Klemenz 2022 </p>
+        <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
     </footer>
     </head>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
