--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -14,33 +14,32 @@
 </head>
 
 <body>
-
     <div class="container max-w-screen-xl p-5">
-        <div class="alignCenter">
-            <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
-        </div>
-        <div class="container_ref">
-            <div class="row justify-content-center">
-                <div class="col-auto">
-                    <div class="card_Ac">
-                        <a class="a_ref" href="../../index.html">
-                            <h1 class="text_navlink p-2 m-2"> Profile </h1>
-                        </a>
+        <div class="containerAnimRev">
+            <div class="alignCenter">
+                <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+            </div>
+            <div class="container_ref">
+                <div class="row justify-content-center">
+                    <div class="col-auto">
+                        <div class="card_Ac">
+                            <a class="a_ref" href="../../index.html">
+                                <h1 class="text_navlink p-2 m-2">Profile</h1>
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-auto">
-                    <div class="card_NavDeac">
-                        <a class="a_ref" href="./projects.html">
-                            <h1 class="text-white p-2 m-2">Projects</h1>
-                        </a>
+                    <div class="col-auto">
+                        <div class="card_NavDeac">
+                            <a class="a_ref" href="./projects.html">
+                                <h1 class="text-white p-2 m-2">Projects</h1>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
+            <h1 class="header1">Projects</h1>
         </div>
-
-        <h1 class="header1">Projects</h1>
-
-        <div class="row row-cols-1 row-cols-md-2 g-4 row_pr">
+        <div class="row row-cols-1 row-cols-md-2 g-4 row_pr pConAnim">
             <div class="col">
                 <a class="a_ref" href="./trintel_project.html">
                     <div class="card card_pr">
@@ -63,7 +62,7 @@
                 </a>
             </div>
             <div class="col">
-                <a class="a_ref" href="./nudelsearch_project.html">
+                <a class="a_ref" href="">
                     <div class="card card_pr">
                         <img src="../../img/bachelorSeehafenAR_logo.png" class="img_pr" alt="Skyscrapers" />
                         <div class="card-body">
@@ -199,7 +198,7 @@
         </div>
 
         <footer>
-            <p class="footer"> © Philo Klemenz 2022 </p>
+            <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
         </footer>
         </head>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
