--- a/html/pages/homeassistant_project.html
+++ b/html/pages/homeassistant_project.html
@@ -15,90 +15,92 @@
 
 <body>
 
-  <div class="container max-w-screen-xl p-5">
+  <div class="container max-w-screen-xl row_pr ">
+    <div class="projectAnim1">
+      <div class="alignCenter">
+        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+      </div>
 
-    <div class="alignCenter">
-      <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
-    </div>
-
-    <div class="container_ref">
-      <div class="row justify-content-center">
-        <div class="col-auto">
-          <div class="card_Ac">
-            <a class="a_ref" href="../../index.html">
-              <h1 class="text_navlink p-2 m-2"> Profile </h1>
-            </a>
+      <div class="container_ref">
+        <div class="row justify-content-center">
+          <div class="col-auto">
+            <div class="card_Ac">
+              <a class="a_ref" href="../../index.html">
+                <h1 class="text_navlink p-2 m-2"> Profile </h1>
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="col-auto">
-          <div class="card_NavDeac">
-            <a class="a_ref" href="./projects.html">
-              <h1 class="text-white p-2 m-2">Projects</h1>
-            </a>
+          <div class="col-auto">
+            <div class="card_NavDeac">
+              <a class="a_ref" href="./projects.html">
+                <h1 class="text-white p-2 m-2">Projects</h1>
+              </a>
+            </div>
           </div>
         </div>
       </div>
+
+      <h1 class="header1">
+        HomeAssistant
+      </h1>
+      <h1 class="header2">
+        Self-Hosted Homeserver
+      </h1>
     </div>
-
-    <h1 class="header1">
-      HomeAssistant
-    </h1>
-    <h1 class="header2">
-      Self-Hosted Homeserver
-    </h1>
-
-    <div class="m-3 p-4">
+    <div class="m-3 p-4 projectAnim2">
       <img src="../../img/homeassistant/HomAD.png" class="d-block w-100 rounded2" alt="...">
     </div>
-
-    <div class="card m-5 card_pr">
-      <h5 class="card-header header_pr">About the Project</h5>
-      <div class="card-body">
-        <h5 class="card-title">Task</h5>
-        <p class="card-text">The idea of this project was to deploy my own home server for all my smart home devices on
-          a Raspberry Pi.
-        </p>
-        <h5 class="card-title">Functionality</h5>
-        <p class="card-text">This self-hosted home server provides the benefits of a much faster connection among all
-          smart home devices. Furthermore, because of the local approach, no data gets passed through data centers in
-          the cloud, which opens up a whole new way of privacy. In companion with the Mycroft project, I can also
-          control all my devices through voice commands. With this combination, I can fully replace the Google services
-          or Other cloud providers for smart home.
-        </p>
-      </div>
-    </div>
-
-    <div class="card m-5 card_pr">
-      <h5 class="card-header header_pr">Source Project</h5>
-      <div class="card-body">
-        <p class="card-text"><a href="https://www.home-assistant.io/">https://www.home-assistant.io/</a></p>
-      </div>
-    </div>
-
-    <div class="card m-5 card_pr">
-      <h5 class="card-header header_pr">Components</h5>
-      <div class="card-body">
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Docker</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:75%" aria-valuenow="75.0" aria-valuemin="0"
-              aria-valuemax="100">75.0%</div>
-          </div>
-        </div>
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Bash</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:25%" aria-valuenow="25.0" aria-valuemin="0"
-              aria-valuemax="100">25.0%</div>
-          </div>
+    <div class="projectAnim3">
+      <div class="card m-5 card_pr">
+        <h5 class="card-header header_pr">About the Project</h5>
+        <div class="card-body">
+          <h5 class="card-title">Task</h5>
+          <p class="card-text">The idea of this project was to deploy my own home server for all my smart home devices
+            on
+            a Raspberry Pi.
+          </p>
+          <h5 class="card-title">Functionality</h5>
+          <p class="card-text">This self-hosted home server provides the benefits of a much faster connection among all
+            smart home devices. Furthermore, because of the local approach, no data gets passed through data centers in
+            the cloud, which opens up a whole new way of privacy. In companion with the Mycroft project, I can also
+            control all my devices through voice commands. With this combination, I can fully replace the Google
+            services
+            or Other cloud providers for smart home.
+          </p>
         </div>
       </div>
-    </div>
 
+      <div class="card m-5 card_pr">
+        <h5 class="card-header header_pr">Source Project</h5>
+        <div class="card-body">
+          <p class="card-text"><a href="https://www.home-assistant.io/">https://www.home-assistant.io/</a></p>
+        </div>
+      </div>
+
+      <div class="card m-5 card_pr">
+        <h5 class="card-header header_pr">Components</h5>
+        <div class="card-body">
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Docker</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:75%" aria-valuenow="75.0" aria-valuemin="0"
+                aria-valuemax="100">75.0%</div>
+            </div>
+          </div>
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Bash</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:25%" aria-valuenow="25.0" aria-valuemin="0"
+                aria-valuemax="100">25.0%</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <footer>
-    <p class="footer"> © Philo Klemenz 2022 </p>
+    <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
   </footer>
   </head>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
