--- a/html/pages/nudelcloud_project.html
+++ b/html/pages/nudelcloud_project.html
@@ -15,41 +15,41 @@
 
 <body>
 
-  <div class="container max-w-screen-xl p-5">
+  <div class="container max-w-screen-xl row_pr ">
+    <div class="projectAnim1">
+      <div class="alignCenter">
+        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+      </div>
 
-    <div class="alignCenter">
-      <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
-    </div>
-
-    <div class="container_ref">
-      <div class="row justify-content-center">
-        <div class="col-auto">
-          <div class="card_Ac">
-            <a class="a_ref" href="../../index.html">
-              <h1 class="text_navlink p-2 m-2"> Profile </h1>
-            </a>
+      <div class="container_ref">
+        <div class="row justify-content-center">
+          <div class="col-auto">
+            <div class="card_Ac">
+              <a class="a_ref" href="../../index.html">
+                <h1 class="text_navlink p-2 m-2"> Profile </h1>
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="col-auto">
-          <div class="card_NavDeac">
-            <a class="a_ref" href="./projects.html">
-              <h1 class="text-white p-2 m-2">Projects</h1>
-            </a>
+          <div class="col-auto">
+            <div class="card_NavDeac">
+              <a class="a_ref" href="./projects.html">
+                <h1 class="text-white p-2 m-2">Projects</h1>
+              </a>
+            </div>
           </div>
         </div>
       </div>
+
+
+      <h1 class="header1">
+        NudelCloud
+      </h1>
+      <h1 class="header2">
+        Privacy Cloud
+      </h1>
     </div>
 
-
-    <h1 class="header1">
-      NudelCloud
-    </h1>
-    <h1 class="header2">
-      Privacy Cloud
-    </h1>
-
-    
-    <div id="carouselExampleDark" class="carousel carousel-dark slide m-5" data-bs-ride="carousel">
+    <div id="carouselExampleDark" class="carousel carousel-dark slide m-5 projectAnim2" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
           aria-current="true" aria-label="Slide 1"></button>
@@ -82,113 +82,115 @@
       </button>
     </div>
 
-    <div class="card m-5 card_pr">
-      <h5 class="card-header header_pr">Online Instance</h5>
-      <div class="card-body">
-        <p class="card-text"><a href="https://search.philoklemenz.de/">cloud.philoklemenz.de/</a>
-        </p>
+    <div class="projectAnim3">
+      <div class="card m-5 card_pr">
+        <h5 class="card-header header_pr">Online Instance</h5>
+        <div class="card-body">
+          <p class="card-text"><a href="https://search.philoklemenz.de/">cloud.philoklemenz.de/</a>
+          </p>
+        </div>
+      </div>
+
+      <div class="card m-5 card_pr">
+        <h5 class="card-header header_pr">About the Project</h5>
+        <div class="card-body">
+          <h5 class="card-title">Task</h5>
+          <p class="card-text">With this little project, I have deployed my own cloud based on Nextcloud.
+          </p>
+          <h5 class="card-title">Functionality</h5>
+          <p class="card-text">At the Moment Nudelsearch is hosted in the cloud, but in the future I'm aiming to deploy
+            it
+            on my Raspberry Pi. Due to problems with my fritz box, this has to wait. Even though the performance of this
+            engine is not the same as googles engine, but has the big benefit of full privacy. Furthermore, this machine
+            shows
+            you results from all possible engines on the web and shows them all together. The core idea of searnxg is to
+            send encrypted requests to engines on the web and present the answers to the user. With this method, none of
+            the other engines has viable information about you, they can sell. For more Information, check out the wiki:
+          </p>
+          <a href="https://search.philoklemenz.de/info/de/about">search.philoklemenz.de/info/de/about</a>
+        </div>
+      </div>
+
+      <div class="card m-5 card_pr">
+        <h5 class="card-header header_pr">Source Project</h5>
+        <div class="card-body">
+          <h5 class="card-title">Source Project</h5>
+          <p class="card-text"><a href="https://nextcloud.com/"
+              style="text-decoration: none;">https://nextcloud.com/</a>
+          </p>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">GitHub</h5>
+          <p class="card-text"><a href="https://github.com/nextcloud/server"
+              style="text-decoration: none;">https://github.com/nextcloud/server</a>
+          </p>
+        </div>
+      </div>
+
+      <div class="card m-5 card_pr">
+        <h5 class="card-header header_pr">Components</h5>
+        <div class="card-body">
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 m-3">PHP</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:61.0%" aria-valuenow="60.1" aria-valuemin="0"
+                aria-valuemax="100">61.0%</div>
+            </div>
+          </div>
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">JavaScript</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:34.1%" aria-valuenow="34.1" aria-valuemin="0"
+                aria-valuemax="100">34.1%</div>
+            </div>
+          </div>
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Vue</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:2.1%" aria-valuenow="2.1" aria-valuemin="0"
+                aria-valuemax="100"></div>
+              <div class="px-2">2.1%</div>
+            </div>
+          </div>
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Gherkin</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:1.4%" aria-valuenow="1.4" aria-valuemin="0"
+                aria-valuemax="100"></div>
+              <div class="px-2">1.4%</div>
+            </div>
+          </div>
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">SCSS</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:0.6%" aria-valuenow="0.6" aria-valuemin="0"
+                aria-valuemax="100"></div>
+              <div class="px-2">0.6%</div>
+            </div>
+          </div>
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Shell</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:0.3%" aria-valuenow="0.3" aria-valuemin="0"
+                aria-valuemax="100"></div>
+              <div class="px-2">0.3%</div>
+            </div>
+          </div>
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:0.5%" aria-valuenow="0.5" aria-valuemin="0"
+                aria-valuemax="100"></div>
+              <div class="px-2">0.5%</div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-
-    <div class="card m-5 card_pr">
-      <h5 class="card-header header_pr">About the Project</h5>
-      <div class="card-body">
-        <h5 class="card-title">Task</h5>
-        <p class="card-text">With this little project, I have deployed my own cloud based on Nextcloud.
-        </p>
-        <h5 class="card-title">Functionality</h5>
-        <p class="card-text">At the Moment Nudelsearch is hosted in the cloud, but in the future I'm aiming to deploy
-          it
-          on my Raspberry Pi. Due to problems with my fritz box, this has to wait. Even though the performance of this
-          engine is not the same as googles engine, but has the big benefit of full privacy. Furthermore, this machine
-          shows
-          you results from all possible engines on the web and shows them all together. The core idea of searnxg is to
-          send encrypted requests to engines on the web and present the answers to the user. With this method, none of
-          the other engines has viable information about you, they can sell. For more Information, check out the wiki:
-        </p>
-        <a href="https://search.philoklemenz.de/info/de/about">search.philoklemenz.de/info/de/about</a>
-      </div>
-    </div>
-
-    <div class="card m-5 card_pr">
-      <h5 class="card-header header_pr">Source Project</h5>
-      <div class="card-body">
-        <h5 class="card-title">Source Project</h5>
-        <p class="card-text"><a href="https://nextcloud.com/" style="text-decoration: none;">https://nextcloud.com/</a>
-        </p>
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">GitHub</h5>
-        <p class="card-text"><a href="https://github.com/nextcloud/server"
-            style="text-decoration: none;">https://github.com/nextcloud/server</a>
-        </p>
-      </div>
-    </div>
-
-    <div class="card m-5 card_pr">
-      <h5 class="card-header header_pr">Components</h5>
-      <div class="card-body">
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 m-3">PHP</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:61.0%" aria-valuenow="60.1" aria-valuemin="0"
-              aria-valuemax="100">61.0%</div>
-          </div>
-        </div>
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">JavaScript</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:34.1%" aria-valuenow="34.1" aria-valuemin="0"
-              aria-valuemax="100">34.1%</div>
-          </div>
-        </div>
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Vue</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:2.1%" aria-valuenow="2.1" aria-valuemin="0"
-              aria-valuemax="100"></div>
-            <div class="px-2">2.1%</div>
-          </div>
-        </div>
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Gherkin</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:1.4%" aria-valuenow="1.4" aria-valuemin="0"
-              aria-valuemax="100"></div>
-            <div class="px-2">1.4%</div>
-          </div>
-        </div>
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">SCSS</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:0.6%" aria-valuenow="0.6" aria-valuemin="0"
-              aria-valuemax="100"></div>
-            <div class="px-2">0.6%</div>
-          </div>
-        </div>
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Shell</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:0.3%" aria-valuenow="0.3" aria-valuemin="0"
-              aria-valuemax="100"></div>
-            <div class="px-2">0.3%</div>
-          </div>
-        </div>
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:0.5%" aria-valuenow="0.5" aria-valuemin="0"
-              aria-valuemax="100"></div>
-            <div class="px-2">0.5%</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
   </div>
 
   <footer>
-    <p class="footer"> © Philo Klemenz 2022 </p>
+    <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
   </footer>
   </head>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
