--- a/html/pages/nudelsearch_project.html
+++ b/html/pages/nudelsearch_project.html
@@ -15,39 +15,39 @@
 
 <body>
 
-  <div class="container max-w-screen-xl p-5">
+  <div class="container max-w-screen-xl row_pr ">
+    <div class="projectAnim1">
+      <div class="alignCenter">
+        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+      </div>
 
-    <div class="alignCenter">
-      <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
-    </div>
-
-    <div class="container_ref">
-      <div class="row justify-content-center">
-        <div class="col-auto">
-          <div class="card_Ac">
-            <a class="a_ref" href="../../index.html">
-              <h1 class="text_navlink p-2 m-2"> Profile </h1>
-            </a>
+      <div class="container_ref">
+        <div class="row justify-content-center">
+          <div class="col-auto">
+            <div class="card_Ac">
+              <a class="a_ref" href="../../index.html">
+                <h1 class="text_navlink p-2 m-2"> Profile </h1>
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="col-auto">
-          <div class="card_NavDeac">
-            <a class="a_ref" href="./projects.html">
-              <h1 class="text-white p-2 m-2">Projects</h1>
-            </a>
+          <div class="col-auto">
+            <div class="card_NavDeac">
+              <a class="a_ref" href="./projects.html">
+                <h1 class="text-white p-2 m-2">Projects</h1>
+              </a>
+            </div>
           </div>
         </div>
       </div>
+
+      <h1 class="header1">
+        Nudelsearch
+      </h1>
+      <h1 class="header2">
+        Privacy Search Engine
+      </h1>
     </div>
-
-    <h1 class="header1">
-      Nudelsearch
-    </h1>
-    <h1 class="header2">
-      Privacy Search Engine
-    </h1>
-
-    <div id="carouselExampleDark" class="carousel carousel-dark slide m-5" data-bs-ride="carousel">
+    <div id="carouselExampleDark" class="carousel carousel-dark slide m-5 projectAnim2" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
           aria-current="true" aria-label="Slide 1"></button>
@@ -74,6 +74,7 @@
       </button>
     </div>
 
+    <div class="projectAnim3">
     <div class="card m-5 card_pr">
       <h5 class="card-header header_pr">Online Instance</h5>
       <div class="card-body">
@@ -175,11 +176,11 @@
         </div>
       </div>
     </div>
-
+  </div>
   </div>
 
   <footer>
-    <p class="footer"> © Philo Klemenz 2022 </p>
+    <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
   </footer>
   </head>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
