--- a/html/pages/trintel_project.html
+++ b/html/pages/trintel_project.html
@@ -15,39 +15,39 @@
 
 <body>
 
-  <div class="container max-w-screen-xl p-5">
+  <div class="container max-w-screen-xl row_pr">
+    <div class="projectAnim1">
+      <div class="alignCenter">
+        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+      </div>
 
-    <div class="alignCenter">
-      <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
-    </div>
-
-    <div class="container_ref">
-      <div class="row justify-content-center">
-        <div class="col-auto">
-          <div class="card_Ac">
-            <a class="a_ref" href="../../index.html">
-              <h1 class="text_navlink p-2 m-2"> Profile </h1>
-            </a>
+      <div class="container_ref">
+        <div class="row justify-content-center">
+          <div class="col-auto">
+            <div class="card_Ac">
+              <a class="a_ref" href="../../index.html">
+                <h1 class="text_navlink p-2 m-2"> Profile </h1>
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="col-auto">
-          <div class="card_NavDeac">
-            <a class="a_ref" href="./projects.html">
-              <h1 class="text-white p-2 m-2">Projects</h1>
-            </a>
+          <div class="col-auto">
+            <div class="card_NavDeac">
+              <a class="a_ref" href="./projects.html">
+                <h1 class="text-white p-2 m-2">Projects</h1>
+              </a>
+            </div>
           </div>
         </div>
       </div>
+
+      <h1 class="header1">
+        Trintel
+      </h1>
+      <h1 class="header2">
+        Business Transaction Intel
+      </h1>
     </div>
-
-    <h1 class="header1">
-      Trintel
-    </h1>
-    <h1 class="header2">
-      Business Transaction Intel
-    </h1>
-
-    <div id="carouselExampleDark" class="carousel carousel-dark slide m-5" data-bs-ride="carousel">
+    <div id="carouselExampleDark" class="carousel carousel-dark slide m-5 projectAnim2" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
           aria-current="true" aria-label="Slide 1"></button>
@@ -109,103 +109,106 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
       </button>
     </div>
-
-    <div class="card m-5 card_pr">
-      <h5 class="card-header header_pr">About the Project</h5>
-      <div class="card-body">
-        <h5 class="card-title">Task</h5>
-        <p class="card-text">The task of this project consisted in building a website for the RBZ Kiel. The customer
-          wanted a software to support their students in their Business Simulation by monitoring their transactions with
-          their imaginary business. We had two weeks to complete this task and present it to the RBZ.
-        </p>
-        <h5 class="card-title">Functionality</h5>
-        <p class="card-text">Our software provides the basic features like user roles with different interfaces, as well
-          as the Companies and their transactions. A user is then able to perform transactions with their company and
-          get feedback from the software in the form of statistics, sales history or order confirmation. In addition, it
-          is possible for the administrator to adjust the entire simulation.
-        </p>
-      </div>
-    </div>
-
-    <div class="card m-5 card_pr">
-      <h5 class="card-header header_pr">Repository</h5>
-      <div class="card-body">
-        <h5 class="card-title">GitLab</h5>
-        <p class="card-text"><a
-            href="https://cau-git.rz.uni-kiel.de/ifi-ag-se/softwareprojekt/lts-projekte/wise-2122-lms8-017"
-            style="text-decoration: none;">cau-git.rz.uni-kiel.de/ifi-ag-se/softwareprojekt/lts-projekte/wise-2122-lms8-017</a>
-        </p>
-        <h5 class="card-title">GitHub</h5>
-        <p class="card-text"><a href="https://github.com/Nudel4ufl4uf/trintel"
-            style="text-decoration: none;">github.com/Nudel4ufl4uf/trintel</a>
-        </p>
-      </div>
-    </div>
-
-    <div class="card m-5 card_pr">
-      <h5 class="card-header header_pr">Contributers</h5>
-      <div class="card-body">
-        <p class="card-text">
-          <a href="" style="text-decoration: none;">Beckmann, Jonas; </a>
-          <a href="" style="text-decoration: none;">Gerke, Nicklas; </a>
-          <a href="https://git.informatik.uni-kiel.de/stu223691" style="text-decoration: none;">Iben, Jan-Philip; </a>
-          <a href="https://github.com/Nudel4ufl4uf" style="text-decoration: none;">Klemenz, Philo; </a>
-          <a href="https://github.com/b3z" style="text-decoration: none;">Mayer, Luca; </a>
-          <a href="https://github.com/Felioh" style="text-decoration: none;">Ohnesroge, Felix; </a>
-          <a href="https://github.com/cwerl" style="text-decoration: none;">Werl, Christopher; </a>
-          <a href="https://github.com/MaxWiendl" style="text-decoration: none;">Wiendel, Max; </a>
-        </p>
-      </div>
-    </div>
-
-    <div class="card m-5 card_pr">
-      <h5 class="card-header header_pr">Languages</h5>
-      <div class="card-body">
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Java</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:64.4%" aria-valuenow="64.4" aria-valuemin="0"
-              aria-valuemax="100">64.4%</div>
-          </div>
-        </div>
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">HTML</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:31.1%" aria-valuenow="31.3" aria-valuemin="0"
-              aria-valuemax="100">31.1%</div>
-          </div>
-        </div>
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">JavaScript</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:2.3%" aria-valuenow="2.3" aria-valuemin="0"
-              aria-valuemax="100"></div>
-            <div class="px-2">2.3%</div>
-          </div>
-        </div>
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">CSS</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:1.9%" aria-valuenow="1.9" aria-valuemin="0"
-              aria-valuemax="100"></div>
-            <div class="px-2">1.9%</div>
-          </div>
-        </div>
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:0.1%" aria-valuenow="0.1" aria-valuemin="0"
-              aria-valuemax="100"></div>
-            <div class="px-2">0.1%</div>
-          </div>
+    <div class="projectAnim3">
+      <div class="card m-5 card_pr slideUpVeryLong">
+        <h5 class="card-header header_pr">About the Project</h5>
+        <div class="card-body">
+          <h5 class="card-title">Task</h5>
+          <p class="card-text">The task of this project consisted in building a website for the RBZ Kiel. The customer
+            wanted a software to support their students in their Business Simulation by monitoring their transactions
+            with
+            their imaginary business. We had two weeks to complete this task and present it to the RBZ.
+          </p>
+          <h5 class="card-title">Functionality</h5>
+          <p class="card-text">Our software provides the basic features like user roles with different interfaces, as
+            well
+            as the Companies and their transactions. A user is then able to perform transactions with their company and
+            get feedback from the software in the form of statistics, sales history or order confirmation. In addition,
+            it
+            is possible for the administrator to adjust the entire simulation.
+          </p>
         </div>
       </div>
-    </div>
 
+      <div class="card m-5 card_pr">
+        <h5 class="card-header header_pr">Repository</h5>
+        <div class="card-body">
+          <h5 class="card-title">GitLab</h5>
+          <p class="card-text"><a
+              href="https://cau-git.rz.uni-kiel.de/ifi-ag-se/softwareprojekt/lts-projekte/wise-2122-lms8-017"
+              style="text-decoration: none;">cau-git.rz.uni-kiel.de/ifi-ag-se/softwareprojekt/lts-projekte/wise-2122-lms8-017</a>
+          </p>
+          <h5 class="card-title">GitHub</h5>
+          <p class="card-text"><a href="https://github.com/Nudel4ufl4uf/trintel"
+              style="text-decoration: none;">github.com/Nudel4ufl4uf/trintel</a>
+          </p>
+        </div>
+      </div>
+
+      <div class="card m-5 card_pr">
+        <h5 class="card-header header_pr">Contributers</h5>
+        <div class="card-body">
+          <p class="card-text">
+            <a href="" style="text-decoration: none;">Beckmann, Jonas; </a>
+            <a href="" style="text-decoration: none;">Gerke, Nicklas; </a>
+            <a href="https://git.informatik.uni-kiel.de/stu223691" style="text-decoration: none;">Iben, Jan-Philip; </a>
+            <a href="https://github.com/Nudel4ufl4uf" style="text-decoration: none;">Klemenz, Philo; </a>
+            <a href="https://github.com/b3z" style="text-decoration: none;">Mayer, Luca; </a>
+            <a href="https://github.com/Felioh" style="text-decoration: none;">Ohnesroge, Felix; </a>
+            <a href="https://github.com/cwerl" style="text-decoration: none;">Werl, Christopher; </a>
+            <a href="https://github.com/MaxWiendl" style="text-decoration: none;">Wiendel, Max; </a>
+          </p>
+        </div>
+      </div>
+
+      <div class="card m-5 card_pr">
+        <h5 class="card-header header_pr">Languages</h5>
+        <div class="card-body">
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Java</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:64.4%" aria-valuenow="64.4" aria-valuemin="0"
+                aria-valuemax="100">64.4%</div>
+            </div>
+          </div>
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">HTML</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:31.1%" aria-valuenow="31.3" aria-valuemin="0"
+                aria-valuemax="100">31.1%</div>
+            </div>
+          </div>
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">JavaScript</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:2.3%" aria-valuenow="2.3" aria-valuemin="0"
+                aria-valuemax="100"></div>
+              <div class="px-2">2.3%</div>
+            </div>
+          </div>
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">CSS</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:1.9%" aria-valuenow="1.9" aria-valuemin="0"
+                aria-valuemax="100"></div>
+              <div class="px-2">1.9%</div>
+            </div>
+          </div>
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:0.1%" aria-valuenow="0.1" aria-valuemin="0"
+                aria-valuemax="100"></div>
+              <div class="px-2">0.1%</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <footer>
-    <p class="footer"> © Philo Klemenz 2022 </p>
+    <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
   </footer>
   </head>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
