--- a/html/pages/webpage_project.html
+++ b/html/pages/webpage_project.html
@@ -15,88 +15,88 @@
 
 <body>
 
-    <div class="container max-w-screen-xl p-5">
-
-        <div class="alignCenter">
-            <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
-        </div>
-
-        <div class="container_ref">
-            <div class="row justify-content-center">
-                <div class="col-auto">
-                    <div class="card_Ac">
-                        <a class="a_ref" href="../../index.html">
-                            <h1 class="text_navlink p-2 m-2"> Profile </h1>
-                        </a>
+    <div class="container max-w-screen-xl row_pr ">
+        <div class="projectAnim1">
+            <div class="alignCenter">
+                <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+            </div>
+            <div class="container_ref">
+                <div class="row justify-content-center">
+                    <div class="col-auto">
+                        <div class="card_Ac">
+                            <a class="a_ref" href="../../index.html">
+                                <h1 class="text_navlink p-2 m-2"> Profile </h1>
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-auto">
-                    <div class="card_NavDeac">
-                        <a class="a_ref" href="./projects.html">
-                            <h1 class="text-white p-2 m-2">Projects</h1>
-                        </a>
+                    <div class="col-auto">
+                        <div class="card_NavDeac">
+                            <a class="a_ref" href="./projects.html">
+                                <h1 class="text-white p-2 m-2">Projects</h1>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
+            <h1 class="header1">
+                Webpage
+            </h1>
+            <h1 class="header2">
+                Profile Site
+            </h1>
         </div>
 
-        <h1 class="header1">
-            Webpage
-        </h1>
-        <h1 class="header2">
-            Profile Site
-        </h1>
-
-        <div class="m-3 p-4">
+        <div class="m-3 p-4 projectAnim2">
             <img src="../../img/website/website_landing.png" class="d-block w-100 rounded2" alt="...">
         </div>
-
-        <div class="card m-5 card_pr">
-            <h5 class="card-header header_pr">Online Instance</h5>
-            <div class="card-body">
-                <p class="card-text"><a href="https://profile.philoklemenz.de/">profile.philoklemenz.de/</a>
-                </p>
-            </div>
-        </div>
-
-        <div class="card m-5 card_pr">
-            <h5 class="card-header header_pr">About the Project</h5>
-            <div class="card-body">
-                <h5 class="card-title">Task</h5>
-                <p class="card-text">I wanted to get back into HTML and CSS and furthermore learn about DNS
-                    registration, so I build this webpage from scratch.
-                </p>
-                <h5 class="card-title">Functionality</h5>
-                <p class="card-text">The webpage is just a static website to represent some links and information about
-                    me. In the process, I added another page showing my projects I have done, or I am doing.
-                </p>
-            </div>
-        </div>
-
-        <div class="card m-5 card_pr">
-            <h5 class="card-header header_pr">Languages</h5>
-            <div class="card-body">
-                <div>
-                    <h3 class="ls-tight font-bolder display-9 mb-3 m-3">HTML</h3>
-                    <div class="progress m-3">
-                        <div class="progress-bar" role="progressbar" style="--value:79%" aria-valuenow="79.0"
-                            aria-valuemin="0" aria-valuemax="100">79.0%</div>
-                    </div>
-                </div>
-                <div>
-                    <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">CSS</h3>
-                    <div class="progress m-3">
-                        <div class="progress-bar" role="progressbar" style="--value:21%" aria-valuenow="21.0"
-                            aria-valuemin="0" aria-valuemax="100">21.0%</div>
-                    </div>
+        <div class="projectAnim3">
+            <div class="card m-5 card_pr">
+                <h5 class="card-header header_pr">Online Instance</h5>
+                <div class="card-body">
+                    <p class="card-text"><a href="https://profile.philoklemenz.de/">profile.philoklemenz.de/</a>
+                    </p>
                 </div>
             </div>
-        </div>
 
+            <div class="card m-5 card_pr">
+                <h5 class="card-header header_pr">About the Project</h5>
+                <div class="card-body">
+                    <h5 class="card-title">Task</h5>
+                    <p class="card-text">I wanted to get back into HTML and CSS and furthermore learn about DNS
+                        registration, so I build this webpage from scratch.
+                    </p>
+                    <h5 class="card-title">Functionality</h5>
+                    <p class="card-text">The webpage is just a static website to represent some links and information
+                        about
+                        me. In the process, I added another page showing my projects I have done, or I am doing.
+                    </p>
+                </div>
+            </div>
+
+            <div class="card m-5 card_pr">
+                <h5 class="card-header header_pr">Languages</h5>
+                <div class="card-body">
+                    <div>
+                        <h3 class="ls-tight font-bolder display-9 mb-3 m-3">HTML</h3>
+                        <div class="progress m-3">
+                            <div class="progress-bar" role="progressbar" style="--value:79%" aria-valuenow="79.0"
+                                aria-valuemin="0" aria-valuemax="100">79.0%</div>
+                        </div>
+                    </div>
+                    <div>
+                        <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">CSS</h3>
+                        <div class="progress m-3">
+                            <div class="progress-bar" role="progressbar" style="--value:21%" aria-valuenow="21.0"
+                                aria-valuemin="0" aria-valuemax="100">21.0%</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer>
-        <p class="footer"> © Philo Klemenz 2022 </p>
+        <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
     </footer>
     </head>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
