--- a/html/pages/youstage_project.html
+++ b/html/pages/youstage_project.html
@@ -15,100 +15,104 @@
 
 <body>
 
-  <div class="container max-w-screen-xl p-5">
+  <div class="container max-w-screen-xl row_pr ">
+    <div class="projectAnim1">
+      <div class="alignCenter">
+        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+      </div>
 
-    <div class="alignCenter">
-      <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
-    </div>
-
-    <div class="container_ref">
-      <div class="row justify-content-center">
-        <div class="col-auto">
-          <div class="card_Ac">
-            <a class="a_ref" href="../../index.html">
-              <h1 class="text_navlink p-2 m-2"> Profile </h1>
-            </a>
+      <div class="container_ref">
+        <div class="row justify-content-center">
+          <div class="col-auto">
+            <div class="card_Ac">
+              <a class="a_ref" href="../../index.html">
+                <h1 class="text_navlink p-2 m-2"> Profile </h1>
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="col-auto">
-          <div class="card_NavDeac">
-            <a class="a_ref" href="./projects.html">
-              <h1 class="text-white p-2 m-2">Projects</h1>
-            </a>
+          <div class="col-auto">
+            <div class="card_NavDeac">
+              <a class="a_ref" href="./projects.html">
+                <h1 class="text-white p-2 m-2">Projects</h1>
+              </a>
+            </div>
           </div>
         </div>
       </div>
+      <h1 class="header1">
+        Youstage
+      </h1>
+      <h1 class="header2">
+        The Stage is Yours!
+      </h1>
     </div>
-    <h1 class="header1">
-      Youstage
-    </h1>
-    <h1 class="header2">
-      The Stage is Yours!
-    </h1>
-
-    <div class="m-3">
+    <div class="m-3 projectAnim2">
       <img src="../../img/youstage/youstage_pages.png" class="d-block w-100 rounded2" alt="...">
     </div>
+    <div class="projectAnim3">
+      <div class="card m-5 card_pr">
+        <h5 class="card-header header_pr">About the Project</h5>
+        <div class="card-body">
+          <h5 class="card-title">Task</h5>
+          <p class="card-text">The YouStage application is a prototype based upon a student project from early 2020. In
+            the planning phase, the idea was to become familiar with the prototype process. Once the module was
+            completed,
+            I dived deeper by doing a front-end-only application with flutter to find out more about flutter and git.
+          <h5 class="card-title">Functionality</h5>
+          <p class="card-text">The project was intended to serve as a platform for a variety of artists who are unable
+            to
+            perform as normal due to COVID-19. It is supposedly a platform like Twitch, but with more interactive
+            features
+            for the artist in particular. Most of the requirements may be seen in the "Anforderungsanalysis" in you
+            stadium/ Prototype. After the project crashed due to the end of the semester in the middle of 2020, it was
+            my
+            idea to keep it alive in the form of a small prototype. The full Prototype can be seen under
+            youstage/Prototype.
+          </p>
+        </div>
+      </div>
 
-    <div class="card m-5 card_pr">
-      <h5 class="card-header header_pr">About the Project</h5>
-      <div class="card-body">
-        <h5 class="card-title">Task</h5>
-        <p class="card-text">The YouStage application is a prototype based upon a student project from early 2020. In
-          the planning phase, the idea was to become familiar with the prototype process. Once the module was completed,
-          I dived deeper by doing a front-end-only application with flutter to find out more about flutter and git.
-        <h5 class="card-title">Functionality</h5>
-        <p class="card-text">The project was intended to serve as a platform for a variety of artists who are unable to
-          perform as normal due to COVID-19. It is supposedly a platform like Twitch, but with more interactive features
-          for the artist in particular. Most of the requirements may be seen in the "Anforderungsanalysis" in you
-          stadium/ Prototype. After the project crashed due to the end of the semester in the middle of 2020, it was my
-          idea to keep it alive in the form of a small prototype. The full Prototype can be seen under
-          youstage/Prototype.
-        </p>
+      <div class="card m-5 card_pr">
+        <h5 class="card-header header_pr">Repository</h5>
+        <div class="card-body">
+          <h5 class="card-title">GitHub</h5>
+          <p class="card-text"><a
+              href="https://github.com/Nudel4ufl4uf/YouStage-Apk">https://github.com/Nudel4ufl4uf/YouStage-Apk</a></p>
+        </div>
+      </div>
+
+      <div class="card m-5 card_pr">
+        <h5 class="card-header header_pr">Languages</h5>
+        <div class="card-body">
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Dart</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:98.2%" aria-valuenow="64.4" aria-valuemin="0"
+                aria-valuemax="100">98.2%</div>
+            </div>
+          </div>
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Swift</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:1.3%" aria-valuenow="31.3" aria-valuemin="0"
+                aria-valuemax="100"></div>
+              <div class="px-2">1.3%</div>
+            </div>
+          </div>
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:0.5%" aria-valuenow="0.1" aria-valuemin="0"
+                aria-valuemax="100"></div>
+              <div class="px-2">0.5%</div>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
-
-    <div class="card m-5 card_pr">
-      <h5 class="card-header header_pr">Repository</h5>
-      <div class="card-body">
-        <h5 class="card-title">GitHub</h5>
-        <p class="card-text"><a
-            href="https://github.com/Nudel4ufl4uf/YouStage-Apk">https://github.com/Nudel4ufl4uf/YouStage-Apk</a></p>
-      </div>
-    </div>
-
-    <div class="card m-5 card_pr">
-      <h5 class="card-header header_pr">Languages</h5>
-      <div class="card-body">
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Dart</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:98.2%" aria-valuenow="64.4" aria-valuemin="0"
-              aria-valuemax="100">98.2%</div>
-          </div>
-        </div>
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Swift</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:1.3%" aria-valuenow="31.3" aria-valuemin="0"
-              aria-valuemax="100"></div>
-            <div class="px-2">1.3%</div>
-          </div>
-        </div>
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:0.5%" aria-valuenow="0.1" aria-valuemin="0"
-              aria-valuemax="100"></div>
-            <div class="px-2">0.5%</div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-
     <footer>
-      <p class="footer"> © Philo Klemenz 2022 </p>
+      <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
     </footer>
     </head>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
