--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <div class="container max-w-screen-xl p-5">
+  <div class="container max-w-screen-xl p-5 containerAnim">
 
     <div class="alignCenter">
       <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
@@ -25,7 +25,7 @@
         <div class="col-auto">
           <div class="card_NavDeac">
             <a class="a_ref" href="./index.html">
-              <h1 class="text-white p-2 m-2"> Profile </h1>
+              <h1 class="text-white p-2 m-2">Profile</h1>
             </a>
           </div>
         </div>
@@ -109,63 +109,61 @@
 
         <!--Show small image only in Media Size < Large-->
         <div class="imgsmall d-block d-lg-none col-12 col-lg-6 ms-lg-auto">
-          <img src="/img/portrait_half_cropped.jpg" class="img-fluid shadow-4 position-relative rounded2" />
+          <img src="/img/portrait_half_cropped.jpg" class="img-fluid shadow-4 position-relative rounded2 imgAnim" />
         </div>
         <div class="col-12 col-lg-5 mb-10 mb-lg-0">
-          <h1 class="ls-tight font-bolder display-3 mb-5">
+          <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
             Student at CAU<br />Business Informatics.
           </h1>
-          <p class="lead mb-10">
+          <p class="lead mb-10 paraAnimSmall">
             I am a passionate and well structured student getting into Business Informatics (Bachelor),
-            specialising in Data Science and Process Mining with a focus on Projectmanagement.<br />
+            specializing in Data Science and Process Mining with a focus on Projectmanagement.<br />
           </p>
-          <img src="/img/uni_cau.jpg" class="img-fluid shadow-4 position-relative rounded2 my-5" />
-          <h1 class="ls-tight font-bolder display-3 mb-5 pt-5">
+          <img src="/img/uni_cau.jpg" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+          <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">
             Graduation<br />Gymnasium.
           </h1>
-          <p class="lead mb-10">
+          <p class="lead mb-10 paraAnimSmall">
             I graduated from the gymnasium in 2019 with priorities in
             informatics as well as mathematics and physics at the Phillip Melanchton
             Gymnasium Meine.
-          </p>
-          <img src="/img/gymnasium_pmg.png" class="img-fluid shadow-4 position-relative rounded2 my-5" />
-          <h1 class="ls-tight font-bolder display-3 mb-5 pt-5">America.</h1>
-          <p class="lead mb-10">
+          </p> 
+          <img src="/img/gymnasium_pmg.png" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+          <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">America.</h1>
+          <p class="lead mb-10 paraAnimSmall">
             From 2012 - 2015 I have been living in the United Staates of
             America improving my English and furthermore getting to know the
             American culture.
           </p>
-          <p class="lead mb-10">
+          <p class="lead mb-10 paraAnimSmall">
             There I have been studying at the German School Washington DC
             which has a focus on teaching in english, but providing the high
             Standards of German education.
           </p>
-          <img src="/img/gymnasium_gis.png" class="img-fluid shadow-4 position-relative rounded2 my-5" />
+          <img src="/img/gymnasium_gis.png" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
 
-          <h1 class="ls-tight font-bolder display-3 mb-5 pt-5">Elementry School.</h1>
-          <p class="lead mb-10">
+          <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">Elementry School.</h1>
+          <p class="lead mb-10 paraAnimSmall">
             My educational career started in 2008 at the Grundschule am Zellberg in Meine Germany.
             There I was able to construct the foundations for all my steps ahead.
           </p>
-          <img src="/img/elementary_zellberg.png" class="img-fluid shadow-4 position-relative rounded2 my-5" />
+          <img src="/img/elementary_zellberg.png" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
 
-          <h1 class="ls-tight font-bolder display-3 pt-5">Certificates.</h1>
-          <h1 class="ls-tight display-6 mb-5 pt-5">Completed</h1>
-          <div class="card_cert text-white">
-            <h5 class="card-body"> Moderations und Präsentationstechniken </h5>
+          <h1 class="ls-tight font-bolder display-3 pt-5 headerAnim">Certificates.</h1>
+          <h1 class="ls-tight display-6 mb-5 pt-5 headerAnim">Completed</h1>
+          <div class="card_cert text-white paraAnimSmall">
+            <h5 class="card-body"> Moderations- und Präsentationstechniken </h5>
           </div>
-          <h1 class="ls-tight display-6 mb-5 pt-5">In Progress</h1>
-          <div class="card_cert text-white">
-            <h5 class="card-body"> Projektmanagement Basiszertifikat (IPMA) (11/2022) </h5>
-          </div>
+          <h1 class="ls-tight display-6 mb-5 pt-5 headerAnim">In Progress</h1>
+          
         </div>
 
-        <div class="col-12 col-lg-6 ms-lg-auto">
+        <div class="col-12 col-lg-6 ms-lg-auto paraAnimSmall">
 
           <!--Show big image only in Media Size = Large-->
           <div class="d-none d-lg-block">
             <div class="container ml2">
-              <img src="/img/portrait_full_cropped.jpg" class="img-fluid shadow-4 position-relative rounded2" />
+              <img src="/img/portrait_full_cropped.jpg" class="img-fluid shadow-4 position-relative rounded2 imgAnim" />
             </div>
           </div>
 
@@ -185,6 +183,13 @@
             </div>
           </div>
           <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> C# </h3>
+            <div class="progress m-3">
+              <div class="progress-bar" role="progressbar" style="--value:75%" aria-valuenow="75" aria-valuemin="0"
+                aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div>
             <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Dart & Flutter </h3>
             <div class="progress m-3">
               <div class="progress-bar" role="progressbar" style="--value:70%" aria-valuenow="70" aria-valuemin="0"
@@ -194,7 +199,7 @@
           <div>
             <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> HTML & CSS </h3>
             <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:75%" aria-valuenow="75" aria-valuemin="0"
+              <div class="progress-bar" role="progressbar" style="--value:65%" aria-valuenow="65" aria-valuemin="0"
                 aria-valuemax="100"></div>
             </div>
           </div>
@@ -240,7 +245,7 @@
   </div>
   </div>
   <footer>
-    <p class="footer"> © Philo Klemenz 2022 </p>
+    <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
   </footer>
   </head>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
