more little improvements

--- a/html/pages/nudelcloud_project.html
+++ b/html/pages/nudelcloud_project.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <div class="container max-w-screen-xl row_pr ">
+  <div class="container max-w-screen-xl row_pr p-5">
     <div class="projectAnim1">
       <div class="alignCenter">
         <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
@@ -98,16 +98,12 @@
           <p class="card-text">With this little project, I have deployed my own cloud based on Nextcloud.
           </p>
           <h5 class="card-title">Functionality</h5>
-          <p class="card-text">At the Moment Nudelsearch is hosted in the cloud, but in the future I'm aiming to deploy
-            it
-            on my Raspberry Pi. Due to problems with my fritz box, this has to wait. Even though the performance of this
-            engine is not the same as googles engine, but has the big benefit of full privacy. Furthermore, this machine
-            shows
-            you results from all possible engines on the web and shows them all together. The core idea of searnxg is to
-            send encrypted requests to engines on the web and present the answers to the user. With this method, none of
-            the other engines has viable information about you, they can sell. For more Information, check out the wiki:
+          <p class="card-text">
+            This Cloud Storage is selfhosted in on a german cloud server to get the best of both sides being performance
+            and privacy. Furthermore Nextcloud offers a lot of extra features from an email client, office tools, calender and 
+            a lot more. Im Using it as my Hub for everything importand during my daily routine. For more information:
           </p>
-          <a href="https://search.philoklemenz.de/info/de/about">search.philoklemenz.de/info/de/about</a>
+          <a href="https://nextcloud.com/athome/">https://nextcloud.com/athome/</a>
         </div>
       </div>
 
