--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -39,7 +39,7 @@
             </div>
             <h1 class="header1">Projects</h1>
         </div>
-        <div class="row row-cols-1 row-cols-md-2 g-4 row_pr pConAnim">
+        <div class="row row-cols-1 row-cols-md-3 g-4 row_pr pConAnim">
             <div class="col">
                 <a class="a_ref" href="./trintel_project.html">
                     <div class="card card_pr">
@@ -48,7 +48,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
-                                    <h5 class="header_pr">Trintel</h5>
+                                    <h5 class="header_prMain">Trintel</h5>
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
                                 </div>
@@ -62,25 +62,24 @@
                 </a>
             </div>
             <div class="col">
-                <a class="a_ref" href="">
+                <!--<a class="a_ref" href="">-->
                     <div class="card card_pr">
                         <img src="../../img/bachelorSeehafenAR_logo.png" class="img_pr" alt="Skyscrapers" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
-                                    <h5 class="header_pr">AR Process-Documentation Toolkit</h5>
+                                    <h5 class="header_prMain">AR Process-Documentation</h5>
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i>
                                 </div>
                             </div>
                             <p class="text_pr">
-                                This is my bachelors thesis and will be supplying the Seehafen Kiel with a toolkit for
-                                documenting their
-                                processes with AR Components.
+                                This is my bachelors thesis in whitch i developed Augmented Reality Tools to 
+                                Document Processes in logistics.
                             </p>
                         </div>
                     </div>
-                </a>
+                <!--</a>-->
             </div>
             <div class="col">
                 <a class="a_ref" href="./nudelcloud_project.html">
@@ -89,7 +88,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
-                                    <h5 class="header_pr">Nudelcloud</h5>
+                                    <h5 class="header_prMain">Nudelcloud</h5>
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i>
                                 </div>
@@ -109,7 +108,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
-                                    <h5 class="header_pr">Nudelsearch</h5>
+                                    <h5 class="header_prMain">Nudelsearch</h5>
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i>
                                 </div>
@@ -129,7 +128,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
-                                    <h5 class="header_pr">Profile Website</h5>
+                                    <h5 class="header_prMain">Profile Website</h5>
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i></div>
                             </div>
@@ -146,13 +145,14 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
-                                    <h5 class="header_pr">Youstage</h5>
+                                    <h5 class="header_prMain">Youstage</h5>
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
                                 </div>
                             </div>
                             <p class="text_pr">
-                                This is a prototype for a concept application to begin with flutter.
+                                This is a prototype for a concept application to begin with flutter. 
+                                Originally it was a student project.
                             </p>
                         </div>
                     </div>
@@ -165,7 +165,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
-                                    <h5 class="header_pr">Mycroft AI</h5>
+                                    <h5 class="header_prMain">Mycroft AI</h5>
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
                                 </div>
@@ -183,13 +183,14 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
-                                    <h5 class="header_pr">HomeAssistant</h5>
+                                    <h5 class="header_prMain">HomeAssistant</h5>
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
                                 </div>
                             </div>
                             <p class="text_pr">
-                                Here I deployed my own Homeserver for all my Smart Home Devices.
+                                Here I deployed my own Homeserver for all my Smart Home Devices. 
+                                It runs locally on a raspberry pi.
                             </p>
                         </div>
                     </div>
