--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <!--Show small image only in Media Size < Large-->
         <div class="imgsmall d-block d-lg-none col-12 col-lg-6 ms-lg-auto">
-          <img src="/img/portrait_half_cropped.jpg" class="img-fluid shadow-4 position-relative rounded2 imgAnim" />
+          <img src="/img/portrait_half_cropped.jpg" class="img-fluid shadow-4 position-relative rounded2 headerAnim" />
         </div>
         <div class="col-12 col-lg-5 mb-10 mb-lg-0">
           <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
@@ -163,7 +163,7 @@
           <!--Show big image only in Media Size = Large-->
           <div class="d-none d-lg-block">
             <div class="container ml2">
-              <img src="/img/portrait_full_cropped.jpg" class="img-fluid shadow-4 position-relative rounded2 imgAnim" />
+              <img src="/img/portrait_full_cropped.jpg" class="img-fluid shadow-4 position-relative rounded2 headerAnim" />
             </div>
           </div>
 
