--- a/html/pages/mycroft_project.html
+++ b/html/pages/mycroft_project.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="container max-w-screen-xl row_pr ">
+    <div class="container max-w-screen-xl row_pr p-5">
         <div class="projectAnim1">
             <div class="alignCenter">
                 <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
