--- a/html/pages/mycroft_project.html
+++ b/html/pages/mycroft_project.html
@@ -56,7 +56,7 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../../img/mycroft/mc_homepage.png" class="d-block w-100 rounded2" alt="...">
+                    <img src="../../img/mycroft/mc_homepage.png" class="d-block w-100 rounded2 zoomD" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="header_pr">Web Page</h5>
                         <p class="text_pr">This is the Web GUI, but nearly everything is controlled via the terminal.
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../../img/mycroft/mc_chatterminal.png" class="d-block w-100 rounded2" alt="...">
+                    <img src="../../img/mycroft/mc_chatterminal.png" class="d-block w-100 rounded2 zoomD" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="text-white">Terminal GUI</h5>
                         <p class="text-white">Here you can see the terminal GUI that shows your interactions in a
@@ -82,6 +82,9 @@
                 </button>
             </div>
         </div>
+
+        <div id="lightbox"> </div>
+
         <div class="projectAnim3">
             <div class="card m-5 card_pr">
                 <h5 class="card-header header_pr">About the Project</h5>
@@ -137,6 +140,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
         </script>
+    <script src="/html/functions/pageAnimations.js"></script>
 </body>
 
 </html>
