--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -40,11 +40,11 @@
             <h1 class="header1">Projects</h1>
         </div>
         <div class="row row-cols-1 row-cols-md-3 g-4 row_pr pConAnim">
-            <div class="col">
+            <div class="col" >
                 <a class="a_ref" href="./trintel_project.html">
                     <div class="card card_pr">
                         <img src="../../img/trintelV4_transparentB.jpg" class="img_pr"
-                            alt="Hollywood Sign on The Hill" />
+                            alt="Trintel Logo" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -74,7 +74,7 @@
                                 </div>
                             </div>
                             <p class="text_pr">
-                                This is my bachelors thesis in whitch i developed Augmented Reality Tools to 
+                                This is my bachelors thesis in which i developed Augmented Reality Tools to 
                                 Document Processes in logistics.
                             </p>
                         </div>
@@ -94,8 +94,8 @@
                                 </div>
                             </div>
                             <p class="text_pr">
-                                My own public search engine based on searnxg. I deployed this solution due to privacy
-                                concerns.
+                                My own public cloud based on Nextcloud, offering a variety of functions from normal storage over a mail client to 
+                                little apps such as a canban board.
                             </p>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                                 </div>
                             </div>
                             <p class="text_pr">
-                                My own public search engine based on searnxg. I deployed this solution due to privacy
+                                My own public search engine based on Searxng. I deployed this solution due to privacy
                                 concerns.
                             </p>
                         </div>
@@ -145,7 +145,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
-                                    <h5 class="header_prMain">Youstage</h5>
+                                    <h5 class="header_prMain">YouStage</h5>
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
                                 </div>
