--- a/html/pages/homeassistant_project.html
+++ b/html/pages/homeassistant_project.html
@@ -48,8 +48,11 @@
       </h1>
     </div>
     <div class="m-3 p-4 projectAnim2">
-      <img src="../../img/homeassistant/HomAD.png" class="d-block w-100 rounded2" alt="...">
+      <img src="../../img/homeassistant/HomAD.png" class="d-block w-100 rounded2 zoomD" alt="...">
     </div>
+
+    <div id="lightbox"> </div>
+
     <div class="projectAnim3">
       <div class="card m-5 card_pr">
         <h5 class="card-header header_pr">About the Project</h5>
@@ -106,6 +109,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+  <script src="/html/functions/pageAnimations.js"></script>
 </body>
 
 </html>
