--- a/html/pages/nudelcloud_project.html
+++ b/html/pages/nudelcloud_project.html
@@ -15,40 +15,41 @@
 
 <body>
 
-  <div class="container max-w-screen-xl row_pr p-5">
-    <div class="projectAnim1">
-      <div class="alignCenter">
-        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
-      </div>
+  <div class="projectAnim1">
+    <div class="alignCenter">
+      <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+    </div>
 
-      <div class="container_ref">
-        <div class="row justify-content-center">
-          <div class="col-auto">
-            <div class="card_Ac">
-              <a class="a_ref" href="../../index.html">
-                <h1 class="text_navlink p-2 m-2"> Profile </h1>
-              </a>
-            </div>
+    <div class="container_ref">
+      <div class="row justify-content-center">
+        <div class="col-auto">
+          <div class="card_Ac">
+            <a class="a_ref" href="../../index.html">
+              <h1 class="text_navlink p-2 m-2"> Profile </h1>
+            </a>
           </div>
-          <div class="col-auto">
-            <div class="card_NavDeac">
-              <a class="a_ref" href="./projects.html">
-                <h1 class="text-white p-2 m-2">Projects</h1>
-              </a>
-            </div>
+        </div>
+        <div class="col-auto">
+          <div class="card_NavDeac">
+            <a class="a_ref" href="./projects.html">
+              <h1 class="text-white p-2 m-2">Projects</h1>
+            </a>
           </div>
         </div>
       </div>
-
-
-      <h1 class="header1">
-        NudelCloud
-      </h1>
-      <h1 class="header2">
-        Privacy Cloud
-      </h1>
     </div>
 
+
+    <h1 class="header1">
+      NudelCloud
+    </h1>
+    <h1 class="header2">
+      Privacy Cloud
+    </h1>
+  </div>
+
+  
+  <div class="container max-w-screen-xl row_pr p-5">
     <div id="carouselExampleDark" class="carousel carousel-dark slide m-5 projectAnim2" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
@@ -58,17 +59,17 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../../img/Nudelcloud/Cloud Login.png" class="d-block w-100 rounded2" alt="...">
+          <img src="../../img/Nudelcloud/Cloud Login.png" class="d-block w-100 rounded2 zoomD" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../../img/Nudelcloud/CloudDashboard.png" class="d-block w-100 rounded2" alt="...">
+          <img src="../../img/Nudelcloud/CloudDashboard.png" class="d-block w-100 rounded2 zoomD" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../../img/Nudelcloud/CloudFiles.png" class="d-block w-100 rounded2" alt="...">
+          <img src="../../img/Nudelcloud/CloudFiles.png" class="d-block w-100 rounded2 zoomD" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -82,11 +83,13 @@
       </button>
     </div>
 
+    <div id="lightbox"> </div>
+
     <div class="projectAnim3">
       <div class="card m-5 card_pr">
         <h5 class="card-header header_pr">Online Instance</h5>
         <div class="card-body">
-          <p class="card-text"><a href="https://search.philoklemenz.de/">cloud.philoklemenz.de/</a>
+          <p class="card-text"><a href="https://cloud.philoklemenz.de/">cloud.philoklemenz.de</a>
           </p>
         </div>
       </div>
@@ -100,10 +103,11 @@
           <h5 class="card-title">Functionality</h5>
           <p class="card-text">
             This Cloud Storage is selfhosted in on a german cloud server to get the best of both sides being performance
-            and privacy. Furthermore Nextcloud offers a lot of extra features from an email client, office tools, calender and 
-            a lot more. Im Using it as my Hub for everything importand during my daily routine. For more information:
+            and privacy. Furthermore Nextcloud offers a lot of extra features from an email client, office tools,
+            calender and
+            a lot more. Im Using it as my Hub for everything important during my daily routine. For more information:
           </p>
-          <a href="https://nextcloud.com/athome/">https://nextcloud.com/athome/</a>
+          <a href="https://nextcloud.com/athome/">nextcloud.com/athome/</a>
         </div>
       </div>
 
@@ -111,14 +115,13 @@
         <h5 class="card-header header_pr">Source Project</h5>
         <div class="card-body">
           <h5 class="card-title">Source Project</h5>
-          <p class="card-text"><a href="https://nextcloud.com/"
-              style="text-decoration: none;">https://nextcloud.com/</a>
+          <p class="card-text"><a href="https://nextcloud.com/" style="text-decoration: none;">nextcloud.com/</a>
           </p>
         </div>
         <div class="card-body">
           <h5 class="card-title">GitHub</h5>
           <p class="card-text"><a href="https://github.com/nextcloud/server"
-              style="text-decoration: none;">https://github.com/nextcloud/server</a>
+              style="text-decoration: none;">github.com/nextcloud/server</a>
           </p>
         </div>
       </div>
@@ -192,6 +195,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+  <script src="/html/functions/pageAnimations.js"></script>
 </body>
 
 </html>
