--- a/html/pages/trintel_project.html
+++ b/html/pages/trintel_project.html
@@ -59,42 +59,42 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../../img/trintel/trintel_login.png" class="d-block w-100 rounded2" alt="...">
+          <img src="../../img/trintel/trintel_login.png" class="d-block w-100 rounded2 zoomD" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5 class="header_pr">LogIn Page.</h5>
             <p class="text_pr">Here you can log in with your registered Account.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../../img/trintel/trintel_adminpanel.png" class="d-block w-100 rounded2" alt="...">
+          <img src="../../img/trintel/trintel_adminpanel.png" class="d-block w-100 rounded2 zoomD" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5 class="header_pr">Admin Panel.</h5>
             <p class="text_pr">As an administrator, you can access special tools in the Admin Panel.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../../img/trintel/trintel_Unternehmensseite.png" class="d-block w-100 rounded2" alt="...">
+          <img src="../../img/trintel/trintel_Unternehmensseite.png" class="d-block w-100 rounded2 zoomD" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5 class="header_pr">Company Page.</h5>
             <p class="text_pr">In this case, as an administrator, you can see and edit all companies.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../../img/trintel/trintel_Schuelerseite.png" class="d-block w-100 rounded2" alt="...">
+          <img src="../../img/trintel/trintel_Schuelerseite.png" class="d-block w-100 rounded2 zoomD" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5 class="header_pr">Student Page.</h5>
             <p class="text_pr">As an administrator, you can control and search through all student accounts.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../../img/trintel/trintel_Transaktionsseite.png" class="d-block w-100 rounded2" alt="...">
+          <img src="../../img/trintel/trintel_Transaktionsseite.png" class="d-block w-100 rounded2 zoomD" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5 class="header_pr">Transaction Page.</h5>
             <p class="text_pr">The administrator can see all made transactions from all companies in this tab.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../../img/trintel/trintel_Statistikseite.png" class="d-block w-100 rounded2" alt="...">
+          <img src="../../img/trintel/trintel_Statistikseite.png" class="d-block w-100 rounded2 zoomD" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5 class="header_pr">Statistics.</h5>
             <p class="text_pr">The administrator can see all system-wide statistics.</p>
@@ -109,6 +109,9 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
       </button>
     </div>
+
+    <div id="lightbox"> </div>
+
     <div class="projectAnim3">
       <div class="card m-5 card_pr slideUpVeryLong">
         <h5 class="card-header header_pr">About the Project</h5>
@@ -214,6 +217,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+  <script src="/html/functions/pageAnimations.js"></script>
 </body>
 
 </html>
